--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "cp dist/index.html dist/404.html && npx gh-pages -d dist"
+    "deploy": "npm run build && cp dist/index.html dist/404.html && npx gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
